<resources>
    <string name="app_name">MathGame</string>
    <string name="addition">Addition</string>
    <string name="substraction">Subtraction</string>
    <string name="multiplication">Multiplication</string>
    <string name="score">Score</string>
    <string name="life">Life</string>
    <string name="editTextHint">Write your answer here</string>
    <string name="next">Next</string>
    <string name="emptyInput">Please, enter an answer or click next button</string>
    <string name="gameOver">Game over!</string>
    <string name="playAgain">Play again</string>
    <string name="exit">Exit</string>
    <string name="time">Time</string>
    <string name="ok">OK</string>
</resources>