<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/endbg"
    android:orientation="vertical"
    tools:context=".ResultActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_weight="0"
        android:gravity="center"
        android:text="@string/gameOver"
        android:textSize="34sp" />

    <TextView
        android:id="@+id/resultScoreText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_weight="0"
        android:gravity="center"
        android:text="Score: 0"
        android:textSize="34sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp"
        android:layout_weight="0"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonAgain"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/playAgain" />

        <Button
            android:id="@+id/exitButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/exit" />
    </LinearLayout>

</LinearLayout>