<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/addbg"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".GameActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:paddingVertical="16dp">

        <TextView
            android:id="@+id/scoreLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/score"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/currentScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="0"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/lifeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/life"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/currentLife"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="3"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/timeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/time"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/timeCurent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="60"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:id="@+id/questionText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="TextView"
        android:textSize="34sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/answerEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="?attr/colorPrimary"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/editTextHint"
        android:inputType="number"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/okButton"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:backgroundTint="?attr/colorPrimary"
            android:padding="10dp"
            android:text="@android:string/ok"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/nextButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/next"
            android:backgroundTint="?attr/colorPrimary"
            android:textColor="@android:color/white"
            style="@style/Widget.AppCompat.Button.Colored" />
    </LinearLayout>

</LinearLayout>
